fixed hex grid no overflow of creature issue

--- a/src/containers/Battlefield/Battlefield.module.css
+++ b/src/containers/Battlefield/Battlefield.module.css
@@ -43,21 +43,24 @@ li {
     width: 6.65%;
     /* width: 27.85714285714286%; */
     padding: 0 0 7.67% 0;
+    background-image: url(../../public/assets/textures/hiclipart.com.png);
+    background-size: cover;
+    /* background-color: rgba(255, 0, 0, 0.2); */
     /* padding: 0 0 32.16760145166612% 0; */
-    -o-transform: rotate(-60deg) skewY(30deg);
+    /* -o-transform: rotate(-60deg) skewY(30deg);
     -moz-transform: rotate(-60deg) skewY(30deg);
     -webkit-transform: rotate(-60deg) skewY(30deg);
     -ms-transform: rotate(-60deg) skewY(30deg);
     transform: rotate(-60deg) skewY(30deg);
     background: #fd005f;
     overflow: hidden;
-    visibility: hidden;
+    visibility: hidden; */
 }
 
-li * {
-    /* outline: black solid 1px; */
+/* li * {
+    outline: black solid 1px;
     visibility: visible;
-}
+} */
 
 li:nth-child(30n+16),
 li:nth-child(30n+17),
@@ -77,11 +80,16 @@ li:nth-child(30n+30)
 {
     margin-top: -2%;
     margin-bottom: -2%;
-    -o-transform: translateX(50%) rotate(-60deg) skewY(30deg);
+    /* -o-transform: translateX(50%) rotate(-60deg) skewY(30deg);
     -moz-transform: translateX(50%) rotate(-60deg) skewY(30deg);
     -webkit-transform: translateX(50%) rotate(-60deg) skewY(30deg);
     -ms-transform: translateX(50%) rotate(-60deg) skewY(30deg);
-    transform: translateX(50%) rotate(-60deg) skewY(30deg);
+    transform: translateX(50%) rotate(-60deg) skewY(30deg); */
+    -o-transform: translateX(50%);
+    -moz-transform: translateX(50%);
+    -webkit-transform: translateX(50%);
+    -ms-transform: translateX(50%);
+    transform: translateX(50%);
 }
 
 .hexagon {
@@ -90,59 +98,60 @@ li:nth-child(30n+30)
     left: 0;
     width: 100%;
     height: 100%;
-    /* background: rgba(255, 251, 0, 0.5); */
-    /* background-color: red; */
-    border-left: solid 2px #333333;
+    /* border-left: solid 2px #333333;
     border-right: solid 2px #333333;
     -o-transform: skewY(-30deg) rotate(60deg);
     -moz-transform: skewY(-30deg) rotate(60deg);
     -webkit-transform: skewY(-30deg) rotate(60deg);
     -ms-transform: skewY(-30deg) rotate(60deg);
     transform: skewY(-30deg) rotate(60deg);
-    overflow: hidden;
+    overflow: hidden; */
 }
 
-.hexagon:before,
+/* .hexagon:before,
 .hexagon:after {
   content: "";
   position: absolute;
   z-index: 1;
-  /* width: 212.13px;
-  height: 212.13px; */
   width: 100%;
   height: 100%;
-  /* -webkit-transform: skewY(30deg) scaleY(0.5774) rotate(-45deg);
-  -ms-transform: skewY(30deg) scaleY(0.5774) rotate(-45deg); */
-  /* transform: scaleY(0.5774) rotate(-45deg); */
+  -webkit-transform: scaleY(0.5774) rotate(-45deg);
+  -ms-transform: scaleY(0.5774) rotate(-45deg);
   transform: scaleY(0.5774) rotate(-45deg);
-  /* background-color: inherit; */
-  /* left: 38.9340px; */
-}
+} */
 
-.hexagon:before {
+/* .hexagon:before {
     left: 9%;
     top: -13%;
     border-top: solid 2px #333333;
     border-right: solid 2px #333333;
-  }
+  } */
   
-.hexagon:after {
+/* .hexagon:after {
   bottom: -13%;
   left: -8.4%;
   border-bottom: solid 2px #333333;
   border-left: solid 2px #333333;
-}
+} */
 
 .hexagon:hover {
     cursor: pointer;
     background-color: rgba(51, 51, 51, 0.5);
 }
 
-.onHexagon {
+.hexagon * {
+    pointer-events: none;
+    /* transform: translate(-50%,-50%); */
+    /* position: relative; */
+    /* left: -10%;
+    top: -10%; */
+}
+
+/* .onHexagon {
     z-index: 999;
     position: relative;
     overflow: visible;
-}
+} */
 
 /* .onHexagon:before {
     content: " ";
